# Api-ide

./: .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  wiki.yml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs  print.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: lib.rs
crates/forge-core/src/assert/: eval.rs  extract.rs  generate.rs  mod.rs  outcome.rs  schema.rs
crates/forge-core/src/convert/: bruno.rs  common.rs  curl_in.rs  curl_out.rs  mod.rs  postman.rs  snippets.rs
crates/forge-core/src/exec/: cookies.rs  engine.rs  mod.rs  oauth.rs  types.rs
crates/forge-core/src/history/: diff.rs  mod.rs  store.rs
crates/forge-core/src/model/: assertion.rs  auth.rs  body.rs  collection.rs  environment.rs  extraction.rs  hooks.rs  keyvalue.rs  mod.rs  request.rs  workspace.rs
crates/forge-core/src/openapi/: contract.rs  import.rs  mod.rs  skeleton.rs
crates/forge-core/src/protocols/: graphql.rs  grpc.rs  mod.rs  sse.rs  websocket.rs
crates/forge-core/src/reqv1/: assertions.rs  build.rs  bundle.rs  catalog.rs  diag.rs  environment_scope.rs  hooks.rs  index.rs  ir.rs  jshost.rs  lock.rs  matrix.rs  migrate.rs  mock.rs  mod.rs  model.rs  openapi_generate.rs  openapi_scope.rs  pipeline.rs  refs.rs  resolve.rs  runner.rs  scaffold.rs  secrets.rs  sequence.rs  tickets.rs  vars.rs
crates/forge-core/src/runner/: events.rs  mod.rs  plan.rs  report.rs  resolve.rs  run.rs
crates/forge-core/src/script/: api.rs  engine.rs  js.rs  mod.rs  pm.rs  send_request.rs
crates/forge-core/src/store/: mod.rs  ops.rs  variables.rs  workspace.rs
crates/forge-core/src/vars/: dynamic.rs  interpolate.rs  mod.rs  scope.rs
crates/forge-core/tests/: assert_test.rs  auth_exec_test.rs  bruno_test.rs  convert_test.rs  docs_test.rs  exec_test.rs  grpc_test.rs  history_test.rs  openapi_test.rs  postman_test.rs  protocols_test.rs  reqv1_test.rs  runner_test.rs  tls_test.rs  vars_test.rs
crates/forge-core/tests/fixtures/: postman_collection.json  postman_environment.json
crates/forge-core/tests/fixtures/assert/: nested_response.json
crates/forge-core/tests/fixtures/bruno-collection/: bruno.json  collection.bru  login.bru  search.bru  upload.bru
crates/forge-core/tests/fixtures/bruno-collection/charges/: create-charge.bru  folder.bru  get-charge.bru
crates/forge-core/tests/fixtures/bruno-collection/environments/: staging.bru
crates/forge-core/tests/fixtures/grpc/: echo.proto
crates/forge-core/tests/fixtures/openapi/: petstore.json  petstore.yaml
crates/forge-core/tests/fixtures/protocols/: introspection.json
crates/forge-core/tests/fixtures/reqv1/: request-v1.schema.json
crates/forge-core/tests/fixtures/reqv1/project/: project.json  smoke.sequence.json
crates/forge-core/tests/fixtures/reqv1/project/assets/assertions/: always-fail.js  user-created.js  user-created.meta.json
crates/forge-core/tests/fixtures/reqv1/project/assets/data/: create-user-cases.json  tenants.json  users.json
crates/forge-core/tests/fixtures/reqv1/project/assets/data/responses/: users.json
crates/forge-core/tests/fixtures/reqv1/project/assets/extractors/: user-id.js
crates/forge-core/tests/fixtures/reqv1/project/assets/generators/: request-tag.js
crates/forge-core/tests/fixtures/reqv1/project/assets/hooks/: finally-mark.js  on-error-mark.js  service-token.js
crates/forge-core/tests/fixtures/reqv1/project/assets/mocks/: create-user-response.js
crates/forge-core/tests/fixtures/reqv1/project/environments/: local.json
crates/forge-core/tests/fixtures/reqv1/project/requests/users/: create-cases.request.json  create-js.request.json  create.request.json  seq-a.request.json  seq-b.request.json
crates/forge-core/tests/fixtures/runner/: items.json
crates/forge-core/tests/fixtures/vars/: request_template.txt
crates/forge-gui/: Cargo.toml
crates/forge-gui/src/: advisor.rs  app.rs  bridge.rs  git.rs  jira.rs  keymap.rs  license.rs  local.rs  main.rs  state.rs  updater.rs
crates/forge-gui/src/dialogs/: about.rs  bruno_import.rs  curl_import.rs  env_editor.rs  grpc_call.rs  hooks_editor.rs  mod.rs  openapi_import.rs  postman_import.rs  report.rs  search.rs  settings.rs  snippet_export.rs  tour.rs  v1_editor.rs  welcome.rs
crates/forge-gui/src/panels/: assets.rs  collections.rs  console.rs  cookies.rs  history.rs  log.rs  mod.rs  problems.rs  request_editor.rs  terminal.rs  test_results.rs  variables.rs
crates/forge-gui/src/theme/: darcula.rs  fonts.rs  icons.rs  light.rs  mod.rs
crates/forge-gui/src/widgets/: code_editor.rs  kv_table.rs  method_badge.rs  mod.rs  response_view.rs
docs/: ROADMAP-2026-07.md
docs/architecture/: request-format-v1.md
docs/wiki/: README.md  advisor.md  architecture.md  authentication.md  catalog.md  cli.md  development.md  getting-started.md  gui-reference.md  import-export.md  jira.md  licensing.md  openapi.md  project-model.md  protocols.md  release.md  request-format.md  security.md  settings.md  troubleshooting.md
examples/: README.md
examples/demo-workspace/: .gitignore  README.md  demo.sequence.json  forge.json  project.json
examples/demo-workspace/assets/assertions/: pet-name.js  pet-name.meta.json
examples/demo-workspace/assets/data/: pet-cases.json  pets.json
examples/demo-workspace/assets/extractors/: pet-id.js  pet-id.meta.json
examples/demo-workspace/assets/generators/: demo-id.js  demo-id.meta.json
examples/demo-workspace/assets/mocks/: pet-created.js  pet-created.meta.json
examples/demo-workspace/collections/httpbin/: auth-bearer.request.json  collection.json  get-json.request.json  post-echo.request.json
examples/demo-workspace/environments/: demo.json  httpbin.env.json
packaging/linux/: build-appimage.sh  com.ericvogt.apiwright.appdata.xml  com.ericvogt.apiwright.desktop  com.ericvogt.forge.appdata.xml
packaging/macos/: Info.plist  build-dmg.sh
schemas/: assertions-v1.schema.json  asset-metadata-v1.schema.json  hooks-v1.schema.json  sequence-v1.schema.json
scripts/: install-steamdeck.sh
(+18 files in other folders)
