[workspace]
resolver = "2"
members = ["crates/forge-core", "crates/forge-gui", "crates/forge-cli"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/EricVogt93/Api-ide"

[workspace.dependencies]
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
# errors
thiserror = "2"
anyhow = "1"
# ids / time / random
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
# text
regex = "1"
base64 = "0.22"
percent-encoding = "2"
shlex = "2"
# http / async
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
    "http2",
    "charset",
    "system-proxy",
    "cookies",
    "json",
    "multipart",
    "stream",
    "gzip",
    "brotli",
    "deflate",
    "socks",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
url = "2"
http = "1"
# protocols
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
eventsource-stream = "0.2"
graphql-parser = "0.4"
# validation / query
serde_json_path = "0.7"
jsonschema = { version = "0.46", default-features = false }
# openapi
openapiv3 = "2"
# scripting
rhai = { version = "1", features = ["sync", "serde"] }
rquickjs = { version = "0.12", features = ["bindgen"] }
# storage
rusqlite = { version = "0.37", features = ["bundled"] }
# auth
oauth2 = "5"
tiny_http = "0.12"
open = "5"
# misc formats
csv = "1"
quick-xml = "0.38"
quick-junit = "0.6"
similar = "3"
cookie = "0.18"
semver = "1"
sha2 = "0.11"
# fs
tempfile = "3"
walkdir = "2"
# gui
eframe = "0.35"
egui = "0.35"
egui_dock = "0.20"
egui_extras = { version = "0.35", features = ["svg", "image"] }
rfd = "0.17"
arboard = "3"
# cli
clap = { version = "4", features = ["derive"] }
# dev
wiremock = "0.6"
pretty_assertions = "1"

[profile.release]
lto = "thin"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
