[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
