[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "apiwright"
path = "src/main.rs"

[features]
# Built by the official release pipeline with the private forge-pro
# overlay cloned to crates/forge-pro (its enable-pro.sh rewrites this
# feature). Without the overlay, --features pro does not resolve.
pro = []

[dependencies]
forge-core = { path = "../forge-core" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
tiny_http.workspace = true

[dev-dependencies]
tempfile.workspace = true
