[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
regex.workspace = true
base64.workspace = true
percent-encoding.workspace = true
shlex.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
url.workspace = true
http.workspace = true
tokio-tungstenite.workspace = true
eventsource-stream.workspace = true
graphql-parser.workspace = true
serde_json_path.workspace = true
jsonschema.workspace = true
openapiv3.workspace = true
rhai.workspace = true
rquickjs.workspace = true
rusqlite.workspace = true
oauth2.workspace = true
tiny_http.workspace = true
open.workspace = true
csv.workspace = true
quick-xml.workspace = true
quick-junit.workspace = true
similar.workspace = true
cookie.workspace = true
tempfile.workspace = true
walkdir.workspace = true
digest_auth = "0.3.1"
aws-sigv4 = "1.5.1"
aws-credential-types = "1.3.0"
aws-smithy-runtime-api = "1.13.0"
protox = "0.9.1"
prost = "0.14.4"
prost-reflect = { version = "0.16.5", features = ["serde"] }
tonic = { version = "0.14.6", features = ["tls-ring", "tls-native-roots"] }
rustls = { version = "0.23.42", features = ["ring"] }
webpki-roots = "1.0.8"
rustls-pemfile = "2.2.0"

[dev-dependencies]
wiremock.workspace = true
pretty_assertions.workspace = true
rcgen = "0.14.8"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
md-5 = "0.11.0"
