[package]
name = "forge-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forge-ide"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
eframe.workspace = true
egui.workspace = true
egui_dock.workspace = true
egui_extras.workspace = true
rfd.workspace = true
arboard.workspace = true
open.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
chrono.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
