[package]
name = "forge-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "apiwright-ide"
path = "src/main.rs"

[features]
# Built by the official release pipeline with the private forge-pro
# overlay cloned to crates/forge-pro (its enable-pro.sh rewrites this
# feature). Without the overlay, --features pro does not resolve.
pro = []

[dependencies]
forge-core = { path = "../forge-core" }
eframe.workspace = true
egui.workspace = true
egui_dock.workspace = true
egui_extras.workspace = true
rfd.workspace = true
arboard.workspace = true
open.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
log = "0.4"
anyhow.workspace = true
chrono.workspace = true
url.workspace = true
semver.workspace = true
sha2.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
